kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-na-nuvem-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name : devops-na-nuvem-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0874ae5b4ba0698be,subnet-08bb312401d17d201
    alb.ingress.kubernetes.io/security-groups: sg-0ba5fe4a0207d8956
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
